manifests/platform-core-services/victoriametrics/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: victoriametrics-external
  namespace: observability
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: victoriametrics-basic-auth
    nginx.ingress.kubernetes.io/auth-realm: "VictoriaMetrics Authentication Required"
    external-dns.alpha.kubernetes.io/hostname: victoriametrics.hub.nutgraf.in
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - victoriametrics.hub.nutgraf.in
    secretName: victoriametrics-tls
  rules:
  - host: victoriametrics.hub.nutgraf.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: victoria-metrics-cluster-vmselect
            port:
              number: 8481
